# MiraiAssist

./: .gitignore  LICENSE  README.md  config.yaml  detect_audio_device.py  launch.bat  main.py  prompt.txt  pyproject.toml
backups/: MiraiAssist.rar  MiraiAssist1.rar
modules/: __init__.py  config_manager.py  context_manager.py  llm_manager.py  system_manager.py  ui_manager.py
